--- a/index.html
+++ b/index.html
@@ -251,8 +251,20 @@
     
     <!-- Tela Inicial -->
     <div id="telaInicial" class="card">
-      <h1>Bem-vindo ao Quiz de Matemática Ribeirinha!</h1>
-      <p>Teste seus conhecimentos sobre grandezas diretamente e inversamente proporcionais com contexto ribeirinho!</p>
+      <h1>Bem-vindo ao Quiz da Proporcionalidade!</h1>
+      <p>Teste seus conhecimentos e aprimore suas habilidades!  
+
+Este quiz foi desenvolvido para ajudar você a:  
+
+✔ Dominar proporcionalidade (grandezas diretas e inversas)  
+✔ Identificar erros comuns em cálculos matemáticos  
+✔ Aprender com feedback detalhado após cada resposta  
+✔ Desenvolver agilidade com o contador de tempo  
+
+Como funciona:  
+- 20 questões com dificuldade progressiva  
+- 4 níveis de complexidade  
+- Tempo e Pontuação ao Final /p>
       <button onclick="iniciarQuiz()">Iniciar Quiz</button>
     </div>
 
