--- a/index.html
+++ b/index.html
@@ -252,24 +252,21 @@
     <!-- Tela Inicial -->
     <div id="telaInicial" class="card">
       <h1>Bem-vindo ao Quiz da Proporcionalidade!</h1>
-      <p>Teste seus conhecimentos e aprimore suas habilidades!  
+  <p><em>Teste seus conhecimentos e aprimore suas habilidades!</em></p>
+    <p>Este quiz foi desenvolvido para ajudar você a:</p>
+  <ul style="text-align: left; margin: 20px 0; padding-left: 30px;">
+    <li><strong>Dominar proporcionalidade</strong> (grandezas diretas e inversas)</li>
+    <li><strong>Identificar erros comuns</strong> em cálculos matemáticos</li>
+    <li><strong>Aprender com feedback detalhado</strong> após cada resposta</li>
+    <li><strong>Desenvolver agilidade</strong> com o contador de tempo</li>
+  </ul>
+  
+  <p><em>"A matemática é a linguagem do universo. Domine-a!"</em></p>
+  <button onclick="iniciarQuiz()">🔹 Iniciar Quiz</button>
+</div>
 
-Este quiz foi desenvolvido para ajudar você a:  
 
-✔ Dominar proporcionalidade (grandezas diretas e inversas)  
-✔ Identificar erros comuns em cálculos matemáticos  
-✔ Aprender com feedback detalhado após cada resposta  
-✔ Desenvolver agilidade com o contador de tempo  
-
-Como funciona:  
-- 20 questões com dificuldade progressiva  
-- 4 níveis de complexidade  
-- Tempo e Pontuação ao Final /p>
-      <button onclick="iniciarQuiz()">Iniciar Quiz</button>
-    </div>
-
-    <!-- Tela do Quiz -->
-    <div id="quiz" class="card" style="display: none;">
+- Tempo e Pontuard" style="display: none;">
       <div id="contador">Pergunta 1 de 20</div>
       <div id="tempo">Tempo: 0s</div>
       <div id="pergunta"></div>
