--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
   <button onclick="iniciarQuiz()">🔹 Iniciar Quiz</button>
 </div>
 
-
-- Tempo e Pontuard" style="display: none;">
+    <!-- Tela do Quiz -->
+    <div id="quiz" class="card" style="display: none;">
       <div id="contador">Pergunta 1 de 20</div>
       <div id="tempo">Tempo: 0s</div>
       <div id="pergunta"></div>
